#6 Account for coordinated omission when measuring end to end latency.
It is now clear that GC pauses contribute to performance degradation. Sample measurements
when running RoundTripTimeSeparateAppTest:

Exchanged 2000000 messages at a rate of 23987 messages per second  which took 83 seconds
99.99th percentile is 125 microseconds

Exchanged 4000000 messages at a rate of 47975 messages per second  which took 83 seconds
99.99th percentile is 111 microseconds

Exchanged 8000000 messages at a rate of 95954 messages per second  which took 83 seconds
99.99th percentile is 1462 microseconds

Exchanged 20000000 messages at a rate of 159948 messages per second  which took 125 seconds
99.99th percentile is 7803 microseconds

Exchanged 20000000 messages at a rate of 239877 messages per second  which took 83 seconds
99.99th percentile is 72959 microseconds